# bank-viewer

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
frontend/: Cargo.toml  Makefile.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.rs
frontend/src/components/: app.rs  createuser.rs  dashboard.rs  mod.rs  money.rs  reports.rs  signin.rs
frontend/style/: output.css
macro/: Cargo.toml
macro/src/: lib.rs
macro/src/struct_macro/: mod.rs  new_macro.rs
tools/: Dockerfile
tools/sql/: user.sql
user-service/: Cargo.toml  Dockerfile  Makefile.toml
user-service/src/: main.rs
user-service/src/application/usecases/: base_usecase.rs  create_usecase.rs  mod.rs  signin_usecase.rs
user-service/src/common/: result.rs
user-service/src/domains/models/: database.rs  mod.rs  token.rs  user.rs
user-service/src/domains/repositories/: user_repository.rs
user-service/src/domains/services/: jwt.rs
user-service/src/handlers/: auth.rs  default_method.rs  default_route.rs  mod.rs  user.rs
user-service/src/infrastructure/repositories/: user.rs
user-service/src/infrastructure/services/: jwt.rs
user-service/src/models/: database.rs  error.rs  mod.rs  user.rs
user-service/src/routes/: all_routes.rs  auth.rs  mod.rs  user.rs
user-service/src/services/: database.rs
user-service/src/tools/: random.rs
