[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
serde = {version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
oul-bank-macro = { path = "../macro" }
jwt = "0.16.0"
async-trait = "0.1.88"

